# download-sharepoint-documents

./: .gitignore  README.md  pyproject.toml
src/: download-all.py  strip-boms.py
