[tool.poetry]
name = "download-all"
version = "0.1.0"
description = ""
authors = ["Jacob Mischka <jacob@mischka.me>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
requests_ntlm = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
